--- a/cv_site/css/style.css
+++ b/cv_site/css/style.css
@@ -487,7 +487,7 @@ h1 {
 
 #first_slider img {
     width: 100%;
-    max-height: 240px;
+    height: 100%;
 }
 
 #second_slider img {
@@ -496,7 +496,7 @@ h1 {
 }
 
 #first_slider li ul li:first-child {
-    max-height: 15em;
+    height: 240px;
 }
 
 #formations #first_slider li ul img {
@@ -1090,10 +1090,6 @@ form input[type='submit'] {
         grid-template-areas: "hepl formation"
                              "helmo secondaire";
         grid-gap: 1.25em;
-    }
-
-    #hepl img, #helmo img, #formation img, #secondaire img {
-        object-fit: cover;
     }
 
     #formations #first_slider > li {
