--- a/cv_site/css/style.css
+++ b/cv_site/css/style.css
@@ -451,6 +451,10 @@ div#skills_image {
     background-color: #d5d2d2;
 }
 
+#services_list li.active_service:hover {
+    filter: none;
+}
+
 h1 {
     font-size: 1.56em;
 }
@@ -474,7 +478,7 @@ h1 {
     text-align: left;
     line-height: 1.67em;
     padding: 2em 2em 5em 2em;
-    min-width: calc(100%/3.75);
+    min-width: calc((100% / 3) - 6.5em);
 }
 
 #formations #first_slider > li:not(:last-child), #langages #second_slider li:not(:last-child) {
@@ -482,7 +486,7 @@ h1 {
 }
 
 #second_slider > li {
-    min-width: calc(100% / 3.25);
+    min-width: calc((100% / 3) - 2.5em);
 }
 
 #first_slider img {
@@ -775,6 +779,10 @@ footer {
     min-height: 100%;
 }
 
+fieldset {
+    min-width: 1em;
+}
+
 #overlay {
     right: 0;
 }
@@ -786,6 +794,7 @@ footer {
     min-height: 100vh;
     max-width: 30em;
     text-align: left;
+    overflow-x: scroll;
 }
 
 #article_hover > li:first-child {
@@ -816,13 +825,14 @@ legend {
 }
 
 #article_hover form ol input {
-    padding: 1.33em;
+    display: inline-block;
+    padding: 1.33em 0 1.33em 1.33em;
     border-radius: 0.67em;
     -webkit-border-radius: 0.67em;
     -moz-border-radius: 0.67em;
     border: 2px solid black;
     margin-top: 1.33em;
-    min-width: 31em;
+    width: 94%;
 }
 
 form p {
@@ -1036,6 +1046,15 @@ form input[type='submit'] {
         margin-bottom: 2em;
     }
 
+    #nav_list > li:hover {
+        margin-bottom: 14em;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+        border-bottom: 3px solid #FAE09F;
+        box-shadow: 1px 1px black;
+        background-color: grey;
+    }
+
     #nav_list li ul {
         right: 0;
         border: 0;
@@ -1047,7 +1066,7 @@ form input[type='submit'] {
         box-shadow: 1px 1px black;
     }
 
-    ul#first_dropdown, ul#second_dropdown, ul#third_dropdown, ul#fourth_dropdown,  ul#fifth_dropdown {
+    ul#first_dropdown, ul#second_dropdown, ul#third_dropdown, ul#fourth_dropdown, ul#fifth_dropdown {
         top: 2.8em;
     }
 
@@ -1058,10 +1077,6 @@ form input[type='submit'] {
         border-bottom: 3px solid #FAE09F;
         box-shadow: 1px 1px black;
         background-color: grey;
-    }
-
-    #nav_list > li:hover {
-        background-color: initial;
     }
 
     #nav_list > li.active_dropdown:hover {
@@ -1099,12 +1114,26 @@ form input[type='submit'] {
 
 @media (width <= 750px) {
 
+    #nav_list > li:hover {
+        margin-bottom: 1.8em;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+        border-bottom: 3px solid #FAE09F;
+        box-shadow: 1px 1px black;
+        background-color: grey;
+    }
+
+    #nav_list >li.active_dropdown:hover {
+        margin-bottom: 14em;
+    }
+
     #competences_list, #competences #skills_image, #formations nav, #langages nav, #formations #first_slider, #langages #second_slider {
         margin: 0;
     }
 
     #hobbies_list, #article_hover {
         max-width: 100vh;
+        max-height: 100vh;
     }
 
     #competences #skills_image {
@@ -1213,7 +1242,6 @@ form input[type='submit'] {
 
     #article_hover {
         left: 0;
-        min-height: 100vh;
     }
 
     #formations ul#first_slider, #langages ul#second_slider {
@@ -1304,25 +1332,5 @@ form input[type='submit'] {
         margin-left: 1em;
         margin-right: 1em;
         padding-right: 1em;
-    }
-}
-
-@media (width >= 2000) {
-    #langages #second_slider > li {
-        min-width: calc(100% / 3.19);
-    }
-
-    #formations #first_slider>li {
-        min-width: calc(100%/3.6);
-    }
-}
-
-@media (width >= 2500) {
-    #langages #second_slider > li {
-        min-width: calc(100% / 3.12);
-    }
-
-    #formations #first_slider>li {
-        min-width: calc(100%/3.46);
     }
 }
